test/tests/stages/18_structures/invalid_types/initializers/init_struct_with_string.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[33]:
  struct
  identifier(chars)
  {
  char
  identifier(a)
  ;
  char
  identifier(b)
  ;
  char
  identifier(c)
  ;
  char
  identifier(null)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(chars)
  identifier(my_chars)
  =
  string literal("abc")
  ;
  return
  const int(0)
  ;
  }
